<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="all_post">All Post</string>
    <string name="add_post">Add Post</string>
    <string name="profile">Profile</string>
    <string name="save">save</string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email Adress</string>
    <string name="info">Informatoin</string>
</resources>